bug 134106 r=pavlov sr=tor a=asa Uppercase (IMAGE) Content-Type causes Netscape to fail decoding an image attachment